# ferret-tracker

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: config.rs  main.rs  models.rs  store.rs  watcher.rs
src/tui/: app.rs  detail_view.rs  filters.rs  help.rs  input.rs  list_view.rs  mod.rs  tree_view.rs
